fix equation line wrap

--- a/src/styles/blocks/_formula.scss
+++ b/src/styles/blocks/_formula.scss
@@ -1,5 +1,6 @@
 .formula {
   margin: 0;
+  white-space: nowrap;
 
   &__name {
     vertical-align: middle;
